initial navigation drawer

--- a/Kitana/app/src/main/AndroidManifest.xml
+++ b/Kitana/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kitana">
         <activity
+            android:name=".MainContent"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
