--- a/Kitana/app/build.gradle
+++ b/Kitana/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
 
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.core:core-ktx:1.7.0'
 
