--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2021"
 
 [dependencies]
 assert_approx_eq = "1.1.0"
+
+[target.'cfg(target_os="android")'.dependencies]
+jni = { version = "0.19", default-features = false }
+
+[lib]
+crate-type = ["dylib"]
