--- a/Kitana/app/src/main/AndroidManifest.xml
+++ b/Kitana/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".InitApp"
         android:theme="@style/Theme.Kitana">
         <activity
             android:name=".activities.MoonAnimationActivity"
