--- a/rust/tabular/Cargo.toml
+++ b/rust/tabular/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "delta_t_converter"
+name = "tabular"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = ["tabular", "moonlib"]
-default-members = ["tabular", "moonlib"]
+[dependencies]
