--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["tabular", "moonlib", "delta_t_converter"]
-default-members = ["tabular", "moonlib", "delta_t_converter"]
+members = ["tabular", "moonlib", "delta_t_converter", "delta_t_pred_converter"]
+default-members = ["tabular", "moonlib", "delta_t_converter", "delta_t_pred_converter"]
