--- a/rust/moonlib/Cargo.toml
+++ b/rust/moonlib/Cargo.toml
@@ -12,5 +12,6 @@ assert_approx_eq = "1.1.0"
 [target.'cfg(target_os="android")'.dependencies]
 jni = { version = "0.19", default-features = false }
 
+# SS: Rust doesn't like building exes linking to dylibs
 #[lib]
 #crate-type = ["dylib"]
